--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,3 +70,11 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+ul {
+  @apply list-disc px-4;
+}
+
+ol {
+  @apply list-decimal px-4;
+}
