--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,6 +79,13 @@ ol {
   @apply list-decimal px-4;
 }
 
+footer ol,
+footer ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 /* Change Next & Prev Button Colors */
 .swiper-button-next,
 .swiper-button-prev {
